--- a/src/my/contacteditor/ConsultarExcluir.form
+++ b/src/my/contacteditor/ConsultarExcluir.form
@@ -52,15 +52,17 @@
                               <Component id="cbCategoria" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
+                          <Component id="cbEstado" max="32767" attributes="0"/>
+                          <Component id="cbPartido" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
                               <Component id="cbEscolha" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
+                                  <Group type="102" attributes="0">
                                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="240" max="-2" attributes="0"/>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
-                                  <Group type="102" alignment="1" attributes="0">
+                                  <Group type="102" attributes="0">
                                       <Component id="campoNome" pref="195" max="32767" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="campoCPF" min="-2" pref="143" max="-2" attributes="0"/>
@@ -69,8 +71,6 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <Component id="cbEstado" max="32767" attributes="0"/>
-                          <Component id="cbPartido" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
