--- a/src/my/contacteditor/TelaPrefeitoCadastro.form
+++ b/src/my/contacteditor/TelaPrefeitoCadastro.form
@@ -11,7 +11,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
@@ -118,10 +118,7 @@
                                                   </Group>
                                                   <EmptySpace max="-2" attributes="0"/>
                                                   <Group type="103" groupAlignment="0" attributes="0">
-                                                      <Group type="102" attributes="0">
-                                                          <Component id="partidoComboBox" min="-2" max="-2" attributes="0"/>
-                                                          <EmptySpace max="32767" attributes="0"/>
-                                                      </Group>
+                                                      <Component id="partidoComboBox" min="-2" max="-2" attributes="0"/>
                                                       <Component id="nomeVice" max="32767" attributes="0"/>
                                                       <Group type="102" attributes="0">
                                                           <Component id="numVice" min="-2" pref="92" max="-2" attributes="0"/>
